--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,8 +29,8 @@ project.upload.path=/usr/local/tomcat/upload/
 spring.mail.default-encoding=UTF-8
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=xxxxxxxxxxxxxxx
-spring.mail.password=xxxxxxxxxxxxxxx
+spring.mail.username=xxxxxxxxxxxxxx
+spring.mail.password=xxxxxxxxxxxxxx
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties..mail.smtp.debug=true
 spring.mail.properties.mail.smtp.starttls.enable=true
